--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 						Do <code>git checkout -b gh-pages</code> in your local repository folder. <code>Pkg.dir("TestImages")</code> gives the location of the repo.
 					</li>
 					<li>
-						Add the image or imageset in zip format locally to the <code>images/</code> folder on your machine.
+						Add the image locally to the <code>images/</code> folder on your machine.
 					</li>
 					<li>
-						Modify <code>displayimages.js</code> : Add an entry to the <code>images</code> dictionary with attributes filename, colorspace, size and filetype.
+						Run <code>build.jl</code> : Do <code>julia build.jl</code> to generate the javascript file for the documentation. This will also generate a <code>webimages</code> folder.
 					</li>
 					<li>
-						Do <code>git add images/&#60;filename&#62; displayimages.js</code> to <b>add just the new image</b> to the image repository.
+						Do <code>git add --all</code> to stage the changes for a commit.
 					</li>
 					<li>
 						<code>git commit -m "Adds &#60;filename&#62; to the repository from link &#60;link&#62;"</code>
