--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						Add the image locally to the <code>images/</code> folder on your machine.
 					</li>
 					<li>
-						Run <code>build.jl</code> : Do <code>julia build.jl</code> to generate the javascript file for the documentation. This will also generate a <code>webimages</code> folder.
+						Run <code>build.jl</code> : Do <code>julia build.jl</code> to generate the javascript file for the documentation. This will also generate a <code>thumbnails</code> folder.
 					</li>
 					<li>
 						Do <code>git add --all</code> to stage the changes for a commit.
