--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						Do <code>git checkout master</code> to return to the master branch.
 					</li>
 					<li>
-						Modify <code>deps/build.jl</code> : Add a (key, value)=(imagename, link) pair to the <code>remotedict</code> dictionary. For example, to add an image with the name "helloworld", add it to the repository as shown above and then add the entry <code>"helloworld" => "https://github.com/timholy/TestImages.jl/blob/gh-pages/images/helloworld.jpg"</code> to the dictionary.
+						Modify <code>src/TestImages.jl</code> : Add an entry with the filename to the <code>remotedict</code> dictionary.
 					</li>
 					<li>
 						Do <code>git add --all</code> to add the changed source files.
