--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="displayimages.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="displayimages.js"></script>
 	</head>
 	<body>
@@ -15,27 +15,42 @@
 			<div class="col-xs-8 col-xs-offset-2">
 				<br><br>
 				<h1 class="text-center">TestImages.jl</h1>
-				<h4 class="text-center">A repository of standard test images for <a href="https://github.com/JuliaImages/Images.jl">Images.jl</a></h4>
-				<a href="https://travis-ci.org/JuliaImages/TestImages.jl"><img src="https://travis-ci.org/JuliaImages/TestImages.jl.png" class="center-block"></a>
-				<hr>
-
+				<h4>
+					A repository of standard test images for <a
+					href="https://github.com/JuliaImages/Images.jl">Images.jl</a></h4>
+				<a href="https://travis-ci.org/JuliaImages/TestImages.jl">
+					<img src="https://travis-ci.org/JuliaImages/TestImages.jl.png" class="center-block">
+				</a>
 				<h3>Installation</h3>
-				<hr>
-				<h5>On Linux and OSX, this should install automatically. If you find yourself missing most of the images described <a href="#Images">below</a>, please try <code>Pkg.build("TestImages")</code>, which should trigger another attempt to download the standard images. </h5>
-				<h5>In case you would like to download other images from the repository not in the standard set, you can call the <code>testimage</code> with the image name and it will be downloaded from the repository.</h5>
-				<h5>On Windows, the <code>download</code> command, used to download images from the archives, is not fully supported. You can manually download the files listed in <code>deps\build.jl</code> from the <code>images</code> folder of the <code>gh-pages</code> branch of this repository and place them in <code>TestImages\images</code>.</h5>
+				<p>On Linux and OSX, this should install automatically. If you find
+				yourself missing most of the images described <a
+				href="#Images">below</a>, please try
+				<code>Pkg.build("TestImages")</code>, which should trigger another
+				attempt to download the standard images. </p>
+				<p>In case you would like to download other images from the repository
+				not in the standard set, you can call the <code>testimage</code> with
+				the image name and it will be downloaded from the repository.</p>
+				<p>On Windows, the <code>download</code> command, used to download
+				images from the archives, is not fully supported. You can manually
+				download the files listed in <code>deps\build.jl</code> from the
+				<code>images</code> folder of the <code>gh-pages</code> branch of this
+				repository and place them in <code>TestImages\images</code>.</p>
 				<h3>Usage</h3>
-				<hr>
 				<code>using TestImages<br>img = testimage("cameraman")</code>
-				<h5>The standard test images are downloaded to an <code>images/</code> directory inside this package. Any image file stored in this directory is accessible through the <code>testimage</code> function. You can supply the file extension (e.g., ".png", ".tif", etc), but it is not required.</h5>
-				<h5>In case the image is not present locally, the <code>testimage</code> function will check the online repository and download it for you.</h5>
-				<h5></h5>
-
+				<p>The standard test images are downloaded to an <code>images/</code>
+				directory inside this package. Any image file stored in this directory
+				is accessible through the <code>testimage</code> function. You can
+				supply the file extension (e.g., ".png", ".tif", etc), but it is not
+				required.</p>
+				<p>In case the image is not present locally, the <code>testimage</code> function will check the online repository and download it for you.</h5>
 				<h3>Contributing</h3>
-				<hr>
-				<h5>Anyone can contribute images to this repository by submitting a pull request at the <a href="https://github.com/JuliaImages/TestImages.jl">github repo</a>. Do check the images for copyright or license issues before submitting.</h5>
+				<p>Anyone can contribute images to this repository by submitting a pull
+				request at the <a
+				href="https://github.com/JuliaImages/TestImages.jl">github repo</a>. Do
+				check the images for copyright or license issues before submitting.</p>
 
-				<h5>The following steps should be followed to add an image/imageset to the repository :</h5>
+				<p>The following steps should be followed to add an image/imageset to
+				the repository:</hp>
 
 				<ul>
 					<li>
@@ -60,7 +75,7 @@
 						Now submit a pull request to the <code>gh-pages</code> branch. Once accepted, the image or imageset will be stored at <br> https://github.com/JuliaImages/TestImages.jl/blob/gh-pages/images/&#60;filename&#62;.
 					</li>
 				</ul>
-				<h5>Now that the images are added to the repository, we need to modify the source files of the TestImages.jl package to make them available for download.</h5>
+				<p>Now that the images are added to the repository, we need to modify the source files of the TestImages.jl package to make them available for download.</p>
 				<ul>
 					<li>
 						Do <code>git checkout master</code> to return to the master branch.
