adds a step to the Instructions for the metadata

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>TestImages.jl - A repository of images for testing</title>
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="displayimages.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -58,6 +58,9 @@
 					</li>
 					<li>
 						Add the image locally to the <code>images/</code> folder on your machine.
+					</li>
+					<li>
+						If you have metadata, a more common name, a url for the source or an author, you can add that to the <code>metadata.yml</code>.
 					</li>
 					<li>
 						Run <code>build.jl</code> : Do <code>julia build.jl</code> to generate the javascript file for the documentation. This will also generate a <code>thumbnails</code> folder.
