--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						Now submit a pull request to the <code>master</code> branch. Once accepted, the image or imageset will be available for download to users of TestImages.jl.
 					</li>
 				</ul>
-				<h3 id="Images">The Images    <small>[ Click Name to Download ]</small></h3>
+				<h3 id="Images">The Images    <small>[ Click Image or Name to Download ]</small></h3>
 				<table class="table">
 					<tbody id="table-body">
 					</tbody>
